# objfs

./: .gitignore  ARCHITECTURE.md  AUTO_WORKER_REGISTRATION.md  CI_CD_INTEGRATION_SUMMARY.md  CMAKE_INTEGRATION_COMPLETE.md  COMPLETE.md  C_CPP_INTEGRATION.md  Cargo.toml  DISTRIBUTED_COMPILATION_LOCAL_LINKING.md  FINAL_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_RESULTS.md  MACOS_WORKER_SETUP.md  MULTI_WORKER_SETUP.md  NATIVELINK_CROSS_COMPILE_SETUP.md  NATIVELINK_RUST_SETUP.md  PLATFORM_COMPATIBLE_LINKING.md  QUICKSTART.md  README.md  REMOTE_EXECUTION.md  REMOTE_EXECUTION_COMPLETE.md  REMOTE_EXECUTION_STATUS.md  ROADMAP.md  TDD_SUMMARY.md  TEST_SUMMARY.md  USAGE.md  build.rs
.git-issue/: statuses  statuses.bash
docs/cmake-integration/: CMAKE_STRATEGIES.md
docs/guides/: c-cpp-integration.md  ci-cd.md  quickstart.md  remote-execution.md  worker-setup.md
docs/plans/: 2026-02-27-remote-execution-directory-tree.md  2026-03-01-docs-cleanup-design.md  2026-03-01-docs-cleanup-plan.md  2026-03-01-init-subcommand-design.md  2026-03-01-init-subcommand-plan.md  2026-03-01-replace-nativelink-proto.md
docs/reference/: architecture.md  auto-worker-registration.md  linking-strategy.md
examples/ci/: CI_CD_GUIDE.md  PROOF_OF_CONCEPT.md  README.md  github-actions.yml  gitlab-ci.yml  simulate-ci-build.sh
examples/cmake-example/: CMakeLists.txt  README.md  main.c  mylib.c  mylib.h
examples/makefile-example/: .gitignore  Makefile  README.md  hello.c  hello.cpp  setup.sh
src/: bundle.rs  cas.rs  config.rs  directory_tree.rs  eviction.rs  grpc_client.rs  grpc_client.rs.bak  lib.rs  local_worker.rs  output_detection.rs  platform.rs  proto.rs  re_client.rs  remote_config.rs
tests/: cache_eviction_test.rs  cache_workflow_test.rs  config_test.rs  directory_tree_test.rs  execute_rpc_test.rs  hierarchical_cas_test.rs  http_cas_test.rs  hybrid_cas_test.rs  init_integration_test.rs  input_upload_test.rs  integration_test.rs  multi_artifact_test.rs  output_detection_test.rs  output_download_test.rs  partial_bundle_test.rs  permissions_test.rs  platform_cache_test.rs  remote_execution_test.rs  remote_rustc_integration_test.rs  rustc_integration_test.rs
