[package]
name = "objfs"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
tonic = { version = "0.13", features = ["tls-ring", "transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
nativelink-proto = { path = "../nativelink/nativelink-proto" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.10"
filetime = "0.2"

[[bin]]
name = "cargo-objfs-rustc"
path = "src/bin/rustc_wrapper.rs"

[[bin]]
name = "objfs"
path = "src/bin/cli.rs"

[[bin]]
name = "objfs-cc-wrapper"
path = "src/bin/objfs-cc-wrapper.rs"
