[package]
name = "objfs"
version = "0.1.0"
edition = "2024"
description = "Distributed build cache using Remote Execution API v2"
license = "MIT"
repository = "https://github.com/nnunley/objfs"
readme = "README.md"
keywords = ["build-cache", "remote-execution", "compilation", "rust"]
categories = ["development-tools::build-utils", "caching"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
tonic = { version = "0.13", features = ["tls-ring", "transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
toml = { version = "0.8", features = ["preserve_order"] }
json5 = "0.4"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3.10"
filetime = "0.2"

[[bin]]
name = "cargo-objfs-rustc"
path = "src/bin/rustc_wrapper.rs"

[[bin]]
name = "objfs"
path = "src/bin/cli.rs"

[[bin]]
name = "objfs-cc-wrapper"
path = "src/bin/objfs-cc-wrapper.rs"
